--- a/website/templates/website/create-ticket.html
+++ b/website/templates/website/create-ticket.html
@@ -3,8 +3,11 @@
 {% block page_name %}Créer un ticket{% endblock page_name %}
 {% block main_content %}
 <div>
-    <p>Créer un ticket</p>
-    <p>{{ message }}</p>
+    {% if messages %}
+        {% for message in messages %}
+            <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</>
+        {% endfor %}
+    {% endif %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
