--- a/website/templates/website/create-std-review.html
+++ b/website/templates/website/create-std-review.html
@@ -3,14 +3,18 @@
 {% block page_name %}Créer une critique<br><sub>(pas en réponse à un ticket)</sub>{% endblock page_name %}
 {% block main_content %}
 <div>
-    <p>{{ message }}</p>
-    <form method="post" enctype="multipart/form-data">
+    {% if messages %}
+        {% for message in messages %}
+            <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</>
+        {% endfor %}
+    {% endif %}
+    <form method="post" enctype="multipart/form-data" class="create-std-review-form">
         {% csrf_token %}
         
-        <p>Livre / Article</p>
+        <h3>Livre / Article</h3>
         {{ ticket_form.as_p }}
-        
-        <p>Critique</p>
+        <hr>
+        <h3>Critique</h3>
         {{ review_form.as_p }}
 
         <button type="submit" class="button follow-button">Créer</button>
