--- a/website/templates/website/edit-ticket.html
+++ b/website/templates/website/edit-ticket.html
@@ -11,7 +11,7 @@
         {% if ticket.image %}
             <div style="margin-bottom: 10px;">
                 <p>Image actuelle :</p>
-                <img src="{{ ticket.image.url }}" alt="Image actuelle" style="max-width: 200px; max-height: 200px;">
+                <img src="{{ ticket.image.url }}" alt="Image de couverture actuelle du livre/article" style="max-width: 200px; max-height: 200px;">
             </div>
         {% endif %}
 
